-first Iteration updating to java 21 -refactored hibernate imports to match new jakarta prefix -moved Key annotation to new repository for then implementing compile time annotation processing -> no runtime bytecode manipulation -permission key also moved to annotation repository -permission key category moved out of PermissionKey to PermissionKeyOrdering in kernbeisser repository